fixes issues with tools overlapping props panel

--- a/src/components/Controls/_.module.css
+++ b/src/components/Controls/_.module.css
@@ -52,7 +52,7 @@
   top: 0;
   right: 0;
   opacity: 0;
-  translate: -100%;
+  translate: -200%;
   transition: all var(--transition-duration) var(--animation-easing);
   /* display: flex; */
   background-color: blueviolet;
@@ -112,6 +112,10 @@
   flex-flow: row nowrap;
   align-items: center;
   justify-content: space-between;
+  > label {
+    margin-right: 0.5rem;
+    text-transform: capitalize;
+  }
   &.reverse {
     flex-flow: row-reverse nowrap;
   }
